2007-11-25  Al Riddoch  <alriddoch@googlemail.com>

	* configure.ac: Add support for cross compiling, and fix up the
	  comments.

2007-11-25  Al Riddoch  <alriddoch@googlemail.com>

	* Release 0.3.7

2007-11-25  Al Riddoch  <alriddoch@googlemail.com>

	* NEWS: Update date on release news item.

	* acinclude.m4: Include the latest version of the pkgconfig macro.

	* configure.ac: Increment version number, and use latest pkgconfig
	  check syntax.

	* AUTHORS, wfmath.spec.in: Update contact email addresses,

	* atlas/Makefile.am: Remove Atlas-C++ 0.4 test programs.

2007-11-24  Al Riddoch  <alriddoch@zepler.org>

	* wfmath.spec.in: Split static libraries out into their own
	  package.

2007-11-20  Al Riddoch  <alriddoch@zepler.org>

	* wfmath/atlasconv.h: Initialise age when setting up Quaternion from
	  Atlas data.

2007-07-20  Al Riddoch  <alriddoch@zepler.org>

	* NEWS: Update date on release news item.

	* Release 0.3.6

2007-07-18  Al Riddoch  <alriddoch@zepler.org>

	* configure.ac: Increment version number to 0.3.6

2007-07-18  Al Riddoch  <alriddoch@zepler.org>

	* wfmath/axisbox.h, wfmath/axisbox_funcs.h, wfmath/ball.h,
	  wfmath/ball_funcs.h, wfmath/point.h, wfmath/point_funcs.h:
	  Tighten up template specicialisations to deal with stricter
	  rules in gcc 4.2.

2007-02-13  Al Riddoch  <alriddoch@zepler.org>

	* wfmath/polygon_intersect.cpp, wfmath/polygon_intersect.h,
	  wfmath/rotmatrix_funcs.h: When an assert is used to detect
	  a bad condition in a function, ensure that in a production build
	  where asserts are disabled, the function still returns a sane
	  value, to avoid compiler warnings.

2006-08-18  Al Riddoch  <alriddoch@zepler.org>

	* NEWS: Update date on release news item.

	* Release 0.3.5

2006-08-18  Al Riddoch  <alriddoch@zepler.org>

	* autogen.sh: Get rid of non-functional --enable-compile-warnings
	  flag, and enable debug by default when invoking configure from
	  autogen.

2006-08-17  Al Riddoch  <alriddoch@zepler.org>
