@@ -1,4 +1,4 @@
 EXTRA_DIST = CLASS_LAYOUT shape.h Doxyfile.in
 
-doc:
+docs:
 	doxygen
